[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,14 @@ body {
 .img-medium {
     height: 200px;
 }
+      .container
+           {
+           
+            font-family:sans-serif;
+            color: grey;
+            max-width:800px;
+            margin:0 auto;
+            padding-left:20px;
+            padding-right:20px;
 
+               }
